syntax = "proto3";

option java_package = "com.swe.grpc";
option java_outer_classname = "KundeProto";
import "google/protobuf/empty.proto";

// Enum for GeschlechtType
enum GeschlechtType {
    UNDEFINED_GESCHLECHT = 0;
    MAENNLICH = 1;
    WEIBLICH = 2;
    DIVERS = 3;
}

// Enum for FamilienstandType
enum FamilienstandType {
    UNDEFINED_FAMILIENSTAND = 0;
    LEDIG = 1;
    VERHEIRATET = 2;
    GESCHIEDEN = 3;
    VERWITWET = 4;
}

// Enum for InteresseType
enum InteresseType {
    UNDEFINED_INTERESSE = 0;
    SPORT = 1;
    REISEN = 2;
    MUSIK = 3;
    KUNST = 4;
}

// Address object
message Adresse {
    string strasse = 1;
    string hausnummer = 2;
    string plz = 3;
    string ort = 4;
}

// Umsatz object
message Umsatz {
    double betrag = 1;
    google.protobuf.Timestamp datum = 2;
}

// Kunde object
message Kunde {
    string id = 1; // UUID
    string nachname = 2;
    string email = 3;
    int32 kategorie = 4;
    bool hasNewsletter = 5;
    google.protobuf.Timestamp geburtsdatum = 6;
    string homepage = 7; // URL as string
    GeschlechtType geschlecht = 8;
    FamilienstandType familienstand = 9;
    Adresse adresse = 10;
    repeated Umsatz umsaetze = 11;
    repeated InteresseType interessen = 12;
}

// Request for findById
message KundeByIdRequest {
    string id = 1;
}

// Service definition
service KundeReadService {
    rpc findAll(google.protobuf.Empty) returns (stream Kunde);
    rpc findById(KundeByIdRequest) returns (Kunde);
}